# sst-cmake

./: .gersemirc  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt
examples/innosetup/: CMakeLists.txt  png_icon.ps1
examples/innosetup/src/win/: plugin.cpp  standalone.cpp
innosetup/: CMakeLists.txt  install_innosetup.cmake  installer.iss
modules/: FindInnoSetup.cmake  FindSST.cmake  GetCompilers.cmake  GetPlatforms.cmake  GetSystemBits.cmake  InnoSetup.cmake
modules/FindInnoSetup/: png_blank.ps1  template.iss
modules/InnoSetup/: install_innosetup.cmake  installer.iss
